--- a/web/src/main/webapp/WEB-INF/log4j.cfg
+++ b/web/src/main/webapp/WEB-INF/log4j.cfg
@@ -76,3 +76,7 @@ log4j.appender.jeeves.layout.ConversionPattern=%d{ISO8601} %-5p [%c] - %m%n
 log4j.appender.console        = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %-5p [%c] - %m%n
+
+### Override Logging Configuration ###
+log4j.logger.geonetwork.index = INFO
+log4j.logger.org.fao.geonet.monitor.link = INFO, console
