--- a/web/src/main/webapp/WEB-INF/log4j.cfg
+++ b/web/src/main/webapp/WEB-INF/log4j.cfg
@@ -79,4 +79,4 @@ log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %-5p [%c] - %m%n
 
 ### Override Logging Configuration ###
 log4j.logger.geonetwork.index = INFO
-log4j.logger.org.fao.geonet.monitor.link = INFO, console
+log4j.logger.org.fao.geonet.monitor.onlineresource = INFO, console
