--- a/web/pom.xml
+++ b/web/pom.xml
@@ -418,9 +418,13 @@
 		<artifactId>flying-saucer-pdf-itext5</artifactId>
 		<version>9.0.1</version>
 	</dependency>
-	
-	
-	</dependencies>
+    <!-- https://mvnrepository.com/artifact/net.sf.opencsv/opencsv -->
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>2.3</version>
+    </dependency>
+  </dependencies>
 
   
   <build>
